--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,28 @@
 <body>
   유효성 검사
   <!-- 동영상 강의에 나온 코드를 그대로 실습하세요 -->
+  <h1>회원가입</h1>
+  <fieldset>
+    <label>아이디</label>
+    <input type="text" id="username">
+    <div class="failure-message hide">아이디는 네 글자 이상이여야 합니다</div>
+    <div class="success-message hide">사용할 수 있는 아이디입니다</div>
+  </fieldset>
+
+  <fieldset>
+    <label>비밀번호</label>
+    <input type="password" id="password">
+  </fieldset>
+
+  <fieldset>
+    <label>비밀번호 확인</label>
+    <input type="password" id="password-retype">
+    <div class="mismatch-message hide">두 비밀번호가 일치하지 않습니다.</div>
+  </fieldset>
+
+  <Fieldset>
+    <button>회원가입</button>
+  </Fieldset>
 
   <script src="script.js"></script>
 </body>
